tried fixing the styling of posts and user info on mobile devices, needs fixing on desktop.

--- a/src/assets/scss/content.scss
+++ b/src/assets/scss/content.scss
@@ -22,14 +22,14 @@
 }
 
 .content-container {
-	width: 90%;
+	width: 100%;
 	position: relative;
 	margin-bottom: 10%;
 }
 
 #content-section {
 	overflow: hidden;
-	width: 90%;
+	width: 95%;
 	margin: 0 auto;
 	display: flex;
 	justify-content: center;
@@ -41,12 +41,43 @@
 #post-container {
 	height: 100%;
 	display: flex;
+	flex-direction: column;
+	margin-bottom: 2rem;
 	padding: 1rem;
 	gap: 20px;
 
-	.post-links {
-		height: 10rem;
+	.header-container {
+		display: flex;
+		flex-direction: column-reverse;
 	}
+
+	.post-links {
+		margin-top: 3rem;
+		height: 5rem;
+	}
+
+	.post-info {
+		display: flex;
+		align-items: flex-start;
+		justify-content: space-between;
+
+		h2 {
+			margin: 0;
+			padding: 0;
+		}
+
+		.date {
+			color: #fff;
+			font-weight: bold;
+			text-transform: uppercase;
+			font-size: 1.3rem;
+		}
+
+		.user-info {
+			font-size: 1.3rem;
+		}
+	}
+
 	p {
 		margin-bottom: 2rem;
 		font-size: 1.2rem;
@@ -104,28 +135,37 @@
 	}
 }
 @media screen and (min-width: 900px) {
-	.post-info {
-		width: 5rem;
-		display: flex;
-		align-items: flex-start;
-		flex-direction: column;
-		// justify-content: space-evenly;
-		// height: 100%;
-
-		.date {
-			width: 100%;
-			text-align: right;
-			font-size: 2rem;
-			color: white;
-			margin-top: 0.5rem;
-			font-weight: bold;
+	#post-container {
+		// flex-direction: row-reverse;
+		.header-container {
+			flex-direction: row;
 		}
 
-		.user-info {
-			margin-top: 5rem;
-			transform: rotate(-90deg);
+		.post-info {
+			width: 5rem;
+			flex-direction: column;
+			align-items: center;
+			justify-content: flex-start;
+			padding-right: 1rem;
+
+			// height: 100%;
+
+			.date {
+				width: 100%;
+				text-align: right;
+				font-size: 2rem;
+				color: white;
+				margin-top: 0.5rem;
+				font-weight: bold;
+			}
+
+			.user-info {
+				margin-top: 5rem;
+				transform: rotate(-90deg);
+			}
 		}
 	}
+
 	.header-container-post-page {
 		h2 {
 			width: 24%;
