--- a/src/assets/scss/navigation.scss
+++ b/src/assets/scss/navigation.scss
@@ -119,7 +119,7 @@
 			}
 
 			.alone-link {
-				padding-top: 15rem;
+				padding-top: 13rem;
 			}
 		}
 	}
